# dl-over-bale

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CONTRIBUTING.md  Dockerfile  Dockerfile.sender  Makefile  README.md  docker-compose.receiver.yml  docker-compose.sender.yml  docker-compose.yml  pyproject.toml  receiver.py  requirements.sender.txt  requirements.txt  sender.py  text_receiver.py  text_sender.py
.github/workflows/: publish-images.yml
deploy/downloads/: Dockerfile  cleaner.sh
deploy/nginx/: 10-generate-real-ip.sh  20-generate-htpasswd.sh  Dockerfile  default.conf.template
src/: common.py  receiver.py  sender.py  text_receiver.py  text_sender.py
src/dl_over_bale/: __init__.py  receiver.py  sender.py
