[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[project]
name = "dl-over-bale"
version = "0.1.0"
description = "Transfer downloaded files through Bale with sender and receiver services."
readme = "README.md"
license = "MIT"
requires-python = ">=3.13,<3.14"
authors = [
  { name = "Open Source Contributors" },
]
keywords = ["bale", "bot", "docker", "download", "messenger", "yt-dlp"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.13",
  "Topic :: Communications :: Chat",
  "Topic :: Internet",
]
dependencies = [
  "httpx>=0.27,<1.0",
]

[project.optional-dependencies]
sender = [
  "yt-dlp[default]",
]

[project.scripts]
dl-over-bale-sender = "sender:poll_forever"
dl-over-bale-receiver = "receiver:poll_forever"

[dependency-groups]
dev = [
  "ruff>=0.11.0",
]

[tool.ruff]
target-version = "py313"
line-length = 120
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.hatch.build.targets.wheel]
only-include = [
  "src/receiver.py",
  "src/sender.py",
]
sources = ["src"]

[tool.hatch.metadata]
allow-direct-references = true
